blocks/hotline/hotline.css
.hotline.block {
  width: 100%;
  max-width: 1440px;
  margin-right: auto;
}

.hotline .tag-container {
  padding: 0;
  margin: 24px 0 40px;
  list-style: none;
  display: none;
}

.hotline.filter .tag-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 9px;
}

.hotline .category-tag {
  border: 2px solid var(--primary-orange-600);
  background: var(--neutral-white);
  color: var(--primary-orange-600);
  border-radius: 24px;
  margin: 0;
  display: inline-block;
  cursor: pointer;
  font-size: var(--body-font-size-s);
  font-style: normal;
  font-weight: var(--font-weight-bold);
  line-height: 110%;
}

.hotline .category-tag:hover {
  background-color: var(--primary-orange-600);
}

.hotline .category-tag:hover .category-tag-link {
  color: var(--neutral-white);
}

.hotline .category-tag-link {
  color: var(--primary-orange-600);
  text-decoration: none;
  pointer-events: none;
  padding: 12px;
  display: inline-block;
}

.hotline .category-tag-link:focus {
  border-radius: 24px;
}

.hotline .category-tag:hover .category-tag-link:focus {
  color: var(--primary-orange-600);
}

.hotline .category-tag.selected-category .category-tag-link {
  color: var(--neutral-white);
}

.hotline .category-tag.selected-category .category-tag-link:focus {
  color: var(--primary-orange-600);
}

.hotline .category-tag.selected-category {
  background-color: var(--primary-orange-600);
  color: var(--neutral-white);
}

.hotline .business-block {
  position: relative;
  width: 100%;
}

.hotline.filter .business-block {
  border-top: 2px solid var(--neutral-black-400);
  padding: 9px 0;
}

.hotline.filter .business-block:last-child {
  border-bottom: 2px solid var(--neutral-black-400);
}

.hotline .business-list {
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: flex-start;
  row-gap: 24px;
  margin-bottom: 24px;
}

.hotline.filter .business-list {
  gap: 0;
}

.hotline .business-row {
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: flex-start;
}

.hotline.filter .business-row {
  padding-top: 31px;
}

.hotline .business-image-container {
  width: 100%;
  height: 100%;
}

.hotline .business-image-container.bg-primary-orange {
  background-color: var(--primary-orange-600);
  display: flex;
}

.hotline .business-image-container.bg-primary-orange img {
  max-height: 200px;
  min-height: 200px;
  margin: auto;
  object-fit: contain;
  padding: 24px 0;
}

.hotline .business-image-container img {
  width: 100%;
  height: auto;
  display: block;
  object-fit: cover;
}

.hotline .business-info {
  background-color: var(--neutral-black-200);
  padding: 24px;
  flex: 1;
  width: 100%;
}

.hotline .business-info span.icon[class$="-native"] {
  background-color: var(--primary-orange-600);
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 6px;
  width: 28px;
  height: 28px;
  padding: 0;
}

.hotline .business-info span.icon[class$="-native"] svg {
  fill: var(--neutral-white);
}

.hotline.filter .business-info {
  padding: 24px 0;
  background-color: var(--neutral-white);
}

.hotline .business-info h2 {
  color: var(--primary-orange-600); 
  line-height: 120%;
  margin: 0 0 24px;
  font-size: var(--heading-font-size-l);
}

.hotline .business-info p {
  color: var(--neutral-black);
  font-size: var(--body-font-size-m);
  font-weight: var(--font-weight-book);
  line-height: 125%;
  margin: 0 0 24px;
}

.hotline .business-info a {
  color: var(--primary-orange-600);
  text-decoration-color: var(--primary-orange-600);
}

.hotline .business-info .button-container a {
  color: white;
}

.hotline .business-info .button-container a:hover {
  color: white;
}

.hotline .business-info a:hover {
  color: var(--primary-orange-900);
  text-decoration-color: var(--primary-orange-900);
}

.hotline .business-info p:last-child {
  margin-bottom: 0;
  display: flex;
  flex-flow: row nowrap;
  justify-content: flex-start;
  align-items: center;
}

.hotline .business-info p:last-child > a {
  margin-right: 24px;
}

.hotline .business-info p:last-child > a:last-child {
  margin-right: 0;
}

.hotline.filter details[open] summary::after {
  background: url('../../icons/chevron-up-orange.svg') center center no-repeat;
}

.hotline.filter summary {
  width: 100%;
  list-style: none;
  cursor: default;
}

.hotline.filter summary::after {
  content: '';
  position: absolute;
  top: 10px;
  right: 10px;
  background: url('../../icons/chevron-down-grey.svg') center center no-repeat;
  cursor: pointer;
  width: 24px;
  height: 24px;
}

.hotline.filter summary ul {
  list-style: none;
  padding: 0;
  margin: 0;
  font-size: var(--body-font-size-s);
}

.hotline.filter .content h4 {
  color: var(--primary-orange-600);
}

.hotline.filter .content ul {
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: var(--body-font-size-s);
}

@media (width >= 900px) {
  .tag-container {
    margin: 40px 0;
  }

  .hotline .category-tag {
    font-size: var(--body-font-size-m);
  }

  .hotline .business-list {
    row-gap: 40px;
    margin-bottom: 40px;
  }

  .hotline .business-row {
    flex-flow: column wrap;
    align-items: stretch;
  }

  .hotline.filter .business-row {
    padding-top: 0;
  }

  .hotline.filter .business-info {
    padding: 24px;
  }

  .hotline .business-info p {
    margin: 0 0 40px;
  }

  .hotline .business-image-container {
    width: 100%;
    min-height: 306px; 
    max-height: 306px;
  }

  .hotline .business-image-container img {
    width: 100%;
    height: 100%;
    min-height: 306px;
    max-height: 306px;
  }

  .hotline .business-image-container.bg-primary-orange img {
    padding: 0;
  }

  .hotline.filter summary ul {
    font-size: var(--body-font-size-m);
  }

  .hotline.filter .content ul {
    font-size: var(--body-font-size-m);
  }
}

@media (width >= 1200px) {
  .hotline .business-image-container {
    min-width: 300px;
    width: 300px;
    min-height: 306px;
  }

  .hotline .business-row {
    flex-flow: row wrap;
  }
}

@media (width >= 1400px) {
  .hotline .business-image-container {
    min-width: 400px;
    width: 400px;
    min-height: 306px; 
  }
}

